--- a/src/main/resources/com/kec/ileconfig/fxml/home.fxml
+++ b/src/main/resources/com/kec/ileconfig/fxml/home.fxml
@@ -4,10 +4,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckMenuItem?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -35,7 +37,7 @@
             <Menu mnemonicParsing="false" text="Help" />
          </menus>
       </MenuBar>
-      <VBox alignment="CENTER_LEFT" VBox.vgrow="ALWAYS">
+      <VBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="ALWAYS">
          <VBox.margin>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </VBox.margin>
@@ -97,11 +99,20 @@
                         <Button mnemonicParsing="false" onAction="#onSaveFirstVENo" text="Save" />
                      </children>
                   </HBox>
+                  <HBox alignment="TOP_CENTER" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                     <children>
+                        <TextField fx:id="forexFileField" editable="false" promptText="path/to/directory" HBox.hgrow="ALWAYS" />
+                        <Button mnemonicParsing="false" onAction="#onChangeForexFile" text="Change..." />
+                     </children>
+                  </HBox>
+                  <Label text="Exchange Rates  Table" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                </children>
-               <padding>
-                  <Insets bottom="10.0" right="10.0" top="10.0" />
-               </padding>
             </GridPane>
+            <ScrollPane fitToHeight="true" fitToWidth="true" VBox.vgrow="ALWAYS">
+               <content>
+                  <ListView fx:id="logListView" />
+               </content>
+            </ScrollPane>
             <HBox alignment="CENTER_RIGHT" spacing="10.0" VBox.vgrow="NEVER">
                <children>
                   <HBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
